--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,54 @@
-*.class
-*.log
+#from https://github.com/broadinstitute/cromwell/blob/develop/.gitignore
+# common scala config
+*~
+.DS_Store
+.artifactory
+.bsp
+.idea/*
+**/.idea/*
+.ensime_cache/*
+.config/*
+.local/*
+.ensime
+tags
+**/*.tags
+!/.idea/inspectionProfiles/
+.idea/inspectionProfiles/*
+!/.idea/inspectionProfiles/Project_Default.xml
+target
+/site
+
+# custom config
+cromwell-executions
+cromwell-test-executions
+cromwell-test-workflow-logs
+cromwell-workflow-logs
+local-cromwell-executions
+log
+native
+scripts/docker-compose-mysql/compose/mysql/data
+/logs/
+/common-workflow-language/
+# Vault rendered resources
+artifactory_credentials.properties
+aws_credentials
+centaur_secure.inc.conf
+cromwell-centaur-requester-pays-service-account.json
+cromwell-centaur-service-account.json
+cromwell-service-account.json
+cwl_conformance_test.inputs.json
+dockerhub_provider_config_v1.inc.conf
+dockerhub_provider_config_v2.inc.conf
+github_private_deploy_key
+papi_application.inc.conf
+papi_refresh_token.options.json
+papi_v2_gcsa.options.json
+private_docker_papi_v2_usa.options
+tesk_application_ftp.conf
+ftp_centaur_cwl_runner.conf
+tesk_application.conf
+**/__pycache__/
+**/venv/
+exome_germline_single_sample_v1.3/
+**/*.pyc
+Footer
